Fix align right class in css

--- a/assets/css/_utils.scss
+++ b/assets/css/_utils.scss
@@ -1,3 +1,3 @@
 .align-right {
-    align-self: right;
+    align-self: flex-end;
 }
